--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "add": "^2.0.6",
     "formik": "^2.2.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -18,6 +19,7 @@
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.4.9",
     "web-vitals": "^2.1.4",
+    "yarn": "^1.22.18",
     "yup": "^0.32.11"
   },
   "scripts": {
